# pypdb

./: #README.md#  #setup#  .gitignore  MANIFEST  README.md  [distutils]  ___scratch.py  demos.ipynb  pypdb.py  pyproject.toml  requirements.txt  scraper.ipynb  setup.py
.github/workflows/: pytest.yml
demos/: advanced_demos.html  advanced_demos.ipynb  demos.html  demos.ipynb
devtools/conda-recipe/: README.md  conda_build_config.yaml  meta.yaml
docs/: #conf.py#  Makefile  conf.py  index.rst  make.bat  modules.rst  pypdb.rst  requirements.txt  setup.py
pypdb/: __init__.py  _version.py  conftest.py  pypdb.py
pypdb/clients/data/: EXAMPLES.md  data_types.py  test_data_types.py
pypdb/clients/data/graphql/: graphql.py  test_graphql.py
pypdb/clients/fasta/: fasta_client.py  fasta_client_test.py
pypdb/clients/pdb/: pdb_client.py  pdb_client_test.py
pypdb/clients/search/: EXAMPLES.md  search_client.py  search_client_test.py
pypdb/clients/search/operators/: chemical_operators.py  chemical_operators_test.py  seqmotif_operators.py  seqmotif_operators_test.py  sequence_operators.py  sequence_operators_test.py  structure_operators.py  structure_operators_test.py  text_operators.py  text_operators_test.py
pypdb/util/: http_requests.py  test_http_requests.py
tests/: pypdb_test.py  test_http_requests.py  test_pypdb.py
